Stopped tooltips text from wrapping.

--- a/sites/all/themes/elearning/css/global.css.less
+++ b/sites/all/themes/elearning/css/global.css.less
@@ -2262,6 +2262,7 @@ body.page-home {
 .up-inactive:hover:after{
   background: #fdfdfd;
   bottom: -21px;
+  white-space:nowrap;
   content: attr(title);
   left: 120%;
   padding: 15px;
